# beefweb

server/: CMakeLists.txt
server/extlibs/: CMakeLists.txt  server-licenses.txt
server/extlibs/qrcodegen/: CMakeLists.txt
server/extlibs/qrcodegen/files/: CMakeLists.txt
server/extlibs/qrcodegen/local/: FindQrcodegen.cmake
server/src/foobar2000/: CMakeLists.txt  qr_code_dialog.cpp  qr_code_dialog.hpp  resource.h  resource.rc
